Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9125

replay-single test_68: @@@@@@ FAIL: 2nd cp failed 1

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.10.0
    • Lustre 2.10.0
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for parinay <parinay_kondekar@xyratex.com>

      Please provide additional information about the failure here.

      This issue relates to the following test suite run: https://testing.hpdd.intel.com/test_sets/d14c83c8-f2fb-11e6-a0f1-5254006e85c2.

      == replay-single test 68: AT: verify slowing locks =================================================== 06:05:04 (1487081104)
      CMD: onyx-34vm7 lctl get_param -n at_max
      CMD: onyx-34vm1.onyx.hpdd.intel.com lctl get_param -n at_max
      CMD: onyx-34vm8 lctl get_param -n at_max
      CMD: onyx-34vm7 lctl get_param -n at_max
      CMD: onyx-34vm1.onyx.hpdd.intel.com lctl get_param -n at_max
      CMD: onyx-34vm8 lctl get_param -n at_max
      CMD: onyx-34vm7 lctl get_param -n at_history
      CMD: onyx-34vm7 lctl set_param at_history=8
      at_history=8
      CMD: onyx-34vm8 lctl set_param at_history=8
      at_history=8
      CMD: onyx-34vm8 find /sys -name ldlm_enqueue_min
      CMD: onyx-34vm8 cat /sys/module/ptlrpc/parameters/ldlm_enqueue_min
      CMD: onyx-34vm8 echo 20 >> /sys/module/ptlrpc/parameters/ldlm_enqueue_min
      setstripe: unrecognized option '--count=1'
      Create a new file with a specific striping pattern or
      set the default striping pattern on an existing directory or
      delete the default striping pattern from an existing directory
      usage: setstripe -d    (to delete default striping)
       or
      usage: setstripe [--stripe-count|-c ]
                       [--stripe-index|-i ]
                       [--stripe-size|-S ]
                       [--pool|-p ]
                       [--ost|-o ]
                       
      	stripe_size:  Number of bytes on each OST (0 filesystem default)
      	              Can be specified with k, m or g (in KB, MB and GB
      	              respectively)
      	start_ost_idx: OST index of first stripe (-1 default)
      	stripe_count: Number of OSTs to stripe over (0 default, -1 all)
      	pool_name:    Name of OST pool to use (default none)
      	ost_indices:  List of OST indices, can be repeated multiple times
      	              Indices be specified in a format of:
      	                -o ,-,
      	              Or:
      	                -o  -o - -o 
      	              If --pool is set with --ost, then the OSTs
      	              must be the members of the pool.
      fail_val=19
      fail_loc=0x80000312
      fail_val=25
      fail_loc=0x80000312
      cp: error writing '/mnt/lustre/d68.replay-single/f68.replay-single_2': Input/output error
      cp: failed to extend '/mnt/lustre/d68.replay-single/f68.replay-single_2': Input/output error
       replay-single test_68: @@@@@@ FAIL: 2nd cp failed 1 
      

            jamesanunez James Nunez (Inactive)
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: