LU-9125 utils: Postpone deprecation of some options.

This postpones deprecation of soem setstripe options
to 2.9.59, since there's still plenty of code still
using it in the test framework and we need to orderly
update all of it.

Test-Parameters: trivial

Change-Id: Ia6c06ba9298c71b012da5d678731a62e677600e4
Signed-off-by: Oleg Drokin <oleg.drokin@intel.com>
Reviewed-on: https://review.whamcloud.com/25503
Reviewed-by: John L. Hammond <john.hammond@intel.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Tested-by: Jenkins
Reviewed-by: James Simmons <uja.ornl@yahoo.com>